--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -57,7 +57,7 @@ text-decoration:none;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">学华语：不要为学而学<br/>
  <span style="font-family:Lato,sans-serif; font-size:18px"> [Live Sharing Session from 4.00pm to 5.00pm ] <br/><br/>
 Ms Wang Zheng  <br/>
-	 Mediacorp News Anchor </span></td>
+	Mediacorp Anchor </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
@@ -69,10 +69,10 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;"> 悦读花园的小故事<br/>
-			<span style="font-family:Lato,sans-serif; font-size:18px">[Storytelling session (For K1 – P2 students) from 1.00pm to 2.00pm]<br/><br/>
+			<span style="font-family:Lato,sans-serif; font-size:18px">[Online Storytelling Sessions (For K1 – P2 students) from 1.00pm to 2.00pm]<br/><br/>
   Ms Melissa Choo See Check<br/>
-		Associate Librarian, Collection Planning & Development, Chinese Language
-			National Library Board </span></td>
+		Associate Librarian, Chinese Language,
+Collection Planning and Development,  National Library Board</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Melissa-Choo-See-Check" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -85,10 +85,9 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">走进奇妙的动物世界<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm]<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Online Interactive Workshops (For Parent-Child Activity) from 2.30pm to 3.30pm]<br/><br/>
  Ms Ong Peiying  <br/>
-		Senior Manager (Education)
-		Mandai Wildlife Group </span></td>
+		Senior Manager (Education), Mandai Wildlife Group </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Ong-Peiying" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -101,10 +100,11 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">庆中秋线上互动活动<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Engagement Session from 5.30pm to 6.30pm ]<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Online Engagement Sessions (For P1 to P4 Students) from 5.30pm to 6.30pm]<br/><br/>
 Mdm Jiang Yanyan  <br/>
-		Senior Teacher, Chinese Language 
-Princess Elizabeth Primary School, recipient of Distinguished Chinese Language Teacher Award 2021 </span></td>
+		Senior Teacher, Chinese Language, Princess Elizabeth Primary School
+<br>
+ Recipient of Distinguished Chinese Language Teachers Awards 2021 </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mdm-Jiang-Yanyan" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -116,9 +116,9 @@ Princess Elizabeth Primary School, recipient of Distinguished Chinese Language T
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">贴士和策略：通过讲故事激发孩子对华文的兴趣<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22) <br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Pre-Recorded Sessions (Recordings will be made available online from 27 August 2022)]<br/><br/>
 Ms Siau Jiahui <br/>
-		Mediacorp YES 933 DJ </span> </td>
+	Mediacorp YES 933DJ</span> </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Siau-Jiahui" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -131,7 +131,7 @@ Ms Siau Jiahui <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;">家，学习华文的摇篮！<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)  <br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Pre-Recorded Sessions (Recordings will be made available online from 27 August 2022)] <br/>
    <br/>
 Mdm Cheah Sin Wei  <br/>
 		Stay-home Mother<br/>
@@ -154,7 +154,7 @@ Mdm Cheah Sin Wei  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;">利用移动网络工具辅助学前华文教学<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Pre-Recorded Sessions (Recordings will be made available online from 27 August 2022)]<br/><br/>
 Mdm Corinne Madelyn Fan Wai Foong  <br/>
 		Lecturer, NIEC-NP   </span></td>
     <td style="border: none;
@@ -169,8 +169,8 @@ Mdm Corinne Madelyn Fan Wai Foong  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">阅读促进认知发展<br/>
- <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/><br/>
-Professor Wu Nian Ying   <br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px">[Pre-Recorded Sessions (Recordings will be made available online from 27 August 2022)]<br/><br/>
+Professor Wu Nianyang   <br/>
 	 Professor, Shanghai Normal University, School of Education  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
@@ -186,7 +186,7 @@ Professor Wu Nian Ying   <br/>
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
   <span style="font-family:Lato,sans-serif; font-size:18px">[Blended (Hybrid) Session from 11.30am to 12.30am]<br/><br/>
 Dr Zheng Yingjiang   <br/>
-		Master Teacher, AST, SCCL (Resident in Blangah Rise Primary School & MK)   </span></td>
+		Master Teacher, AST, SCCL (Teacher-in-Residence at Blangah Rise Primary School and MK)  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Dr-Zheng-Yingjiang" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
