--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -63,7 +63,7 @@ Ms Wang Zheng  <br/>
  <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
     </tr>
 </table>
-	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling sessions</b></h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
