--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -55,7 +55,7 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">学华语：不要为学而学<br/>
- <span style="font-family:Lato,sans-serif; font-size:18px"> [Live Sharing Session from 4.00pm to 5.00pm ] <br/><br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px">[Live Sharing Sessions (For Parents) from 4.00pm to 5.00pm] <br/><br/>
 Ms Wang Zheng  <br/>
 	Mediacorp Anchor </span></td>
     <td style="border: none;
