--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -13,7 +13,7 @@ third_nav_title: 华文学习展示区
     padding: 3px 13px;
     margin: 9px 13px;
     border-radius: 6px;
-    width: 60%;
+    width: 140px;
    text-align: center;
 	display:block;
 	}
@@ -24,9 +24,9 @@ third_nav_title: 华文学习展示区
     padding: 3px 13px;
     margin: 9px 13px;
     border-radius: 6px;
-    width: 60%;
+    width: 140px;
   text-align: center;
-	display:none;
+	display:block;
 	}
 	.btn-group {
 	margin-top:-15px;
