--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -11,7 +11,7 @@ third_nav_title: 华文学习展示区
     font-family: KaiTi;
     background-color: #d84178;;
     padding: 3px 13px;
-    margin: 9px 13px;
+    margin: 9px 0px;
     border-radius: 6px;
     width: 140px;
    text-align: center;
@@ -22,7 +22,7 @@ third_nav_title: 华文学习展示区
     font-family: KaiTi;
     background-color: #d84178;;
     padding: 3px 13px;
-    margin: 9px 13px;
+    margin: 9px 0px;
     border-radius: 6px;
     width: 140px;
   text-align: center;
@@ -42,9 +42,11 @@ margin-bottom:0rem;
 text-decoration:none;
 }
 	@media screen and (max-width: 600px) {
- .responsive {
-   width: 53%;
-   font-size: 18px;
+ .btn1 {
+   width: 105px;
+  }
+	.btn2{
+   width: 105px;
   }
 }
 </style>
