--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -26,7 +26,7 @@ third_nav_title: 华文学习展示区
     border-radius: 6px;
     width: 140px;
   text-align: center;
-	display:block;
+	display:none;
 	}
 	.btn-group {
 	margin-top:-15px;
@@ -46,7 +46,7 @@ text-decoration:none;
    width: 100px;
   }
 	.btn2{
-   width: 105px;
+   width: 100px;
   }
 }
 </style>
