--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -11,9 +11,9 @@ third_nav_title: 华文学习展示区
     font-family: KaiTi;
     background-color: #d84178;;
     padding: 3px 13px;
-    margin: 9px 13px;
+    margin: 9px 0px;
     border-radius: 6px;
-    width: 60%;
+    width: 140px;
   text-align: center;
 	display:block;
 	}
@@ -22,9 +22,9 @@ third_nav_title: 华文学习展示区
     font-family: KaiTi;
     background-color: #d84178;;
     padding: 3px 13px;
-    margin: 9px 13px;
+    margin: 9px 0px;
     border-radius: 6px;
-    width: 60%;
+    width: 140px;
   text-align: center;
 	display:none;
 	}
@@ -40,6 +40,16 @@ background-color: lightgrey;!important;
 .content a {
 margin-bottom:0rem;
 text-decoration:none;
+}
+	@media screen and (max-width: 600px) {
+ .btn1 {
+		width: 90px;
+		font-size: 14px;
+  }
+	.btn2{
+		width: 90px;
+		font-size: 14px;
+  }
 }
 </style>
 </head>
