--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -190,7 +190,7 @@ text-decoration:none;
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">进入奇妙的动物世界
    <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Wildlife Reserves Singapore </span>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">Mandai Wildlife Reserve </span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
