Update file: சமூகப் பங்காளர்கள்.md

--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
@@ -135,7 +135,7 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td style="border: none; width: 70%;font-size:20px;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்<br /><span style="font-family:Lato,sans-serif;">Mandai Wildlife Group</span>
+    <td style="border: none; width: 70%;font-size:20px;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்<br /><span style="font-family:Lato,sans-serif;">Mandai Wildlife Reserve</span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
