--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -54,7 +54,23 @@ text-decoration:none;
 </style>
 </head>
 <body>
-
+<table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;font-size:25px;
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">推广华文学习委员会
+   <br />
+			<span style="font-family:Lato,sans-serif;font-size:20px;">Committee to Promote Chinese Language Learning</span>
+</td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+  <div class="btn-group">	
+ <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+  </div></td>
+    </tr>
+</table>
+	<br>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -88,6 +104,23 @@ text-decoration:none;
     </tr>
 </table>
 <br />
+	<table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;font-size:25px;
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">进入奇妙的动物世界
+   <br />
+			<span style="font-family:Lato,sans-serif;font-size:20px;">Mandai Wildlife Reserve </span>
+</td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+  <div class="btn-group">	
+ <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+  </div></td>
+    </tr>
+</table>
+	<br>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -149,7 +182,23 @@ text-decoration:none;
   </div></td>
     </tr>
 </table>
-<br />
+<br /><table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;font-size:25px;
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">华文华语，快乐学习！
+   <br />
+			<span style="font-family:Lato,sans-serif;font-size:20px;">Singapore Centre for Chinese Language</span>
+</td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+  <div class="btn-group">	
+ <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+  </div></td>
+    </tr>
+</table>
+	<br>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -184,54 +233,5 @@ text-decoration:none;
     </tr>
 </table>
 <br />
-<table style="border-collapse: collapse;
-  width: 100%;">
-  <tr>
-    <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">进入奇妙的动物世界
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Mandai Wildlife Reserve </span>
-</td>
-    <td style="border: none;
-  text-align: left;padding: 8px;width: 30%;">
-  <div class="btn-group">	
- <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
-  </div></td>
-    </tr>
-</table>
 <br />
-<table style="border-collapse: collapse;
-  width: 100%;">
-  <tr>
-    <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">华文华语，快乐学习！
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Singapore Centre for Chinese Language</span>
-</td>
-    <td style="border: none;
-  text-align: left;padding: 8px;width: 30%;">
-  <div class="btn-group">	
- <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
-  </div></td>
-    </tr>
-</table>
-<br />
-<table style="border-collapse: collapse;
-  width: 100%;">
-  <tr>
-    <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">推广华文学习委员会
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Committee to Promote Chinese Language Learning</span>
-</td>
-    <td style="border: none;
-  text-align: left;padding: 8px;width: 30%;">
-  <div class="btn-group">	
- <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
-  </div></td>
-    </tr>
-</table>
 </body>
