Update file: சமூகப் பங்காளர்கள்.md

--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
@@ -74,6 +74,20 @@ text-decoration:none;
     </tr>
 </table>
 <br />
+	<table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;font-size:20px;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்<br /><span style="font-family:Lato,sans-serif;">Mandai Wildlife Reserve</span>
+	</td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+  <div class="btn-group">
+ <a href="/tl-Mandai-Wildlife-Group" class="btn1" style="color:#fff;">View Synopsis</a>
+  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+  </div></td>
+    </tr>
+</table>
+<br />
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
