--- a/_exhibits/华文学习展示区/教育部课程.md
+++ b/_exhibits/华文学习展示区/教育部课程.md
@@ -61,7 +61,7 @@ background-color: lightgrey;!important;
 <p>The key purpose of Mother Tongue Language (MTL) education is to equip our young with effective communication skills and to create a greater awareness and appreciation of our culture and values, which in turn enables our young to have the confidence to connect with similar language communities across Asia and the world. <br /><br />
  The MTL curriculum aims to develop our young to be proficient language users who have strong foundational language and literacy skills. The curriculum provides students with opportunities to interact in real-life settings and immersive environments, strengthening language skills such as listening, speaking, reading and writing. The infusion of Information and Communications Technology (ICT), Character and Citizenship Education (CCE) and Social and Emotional Learning (SEL) into the curriculum further enhances the learning and exposes our young to the culture and values woven into the curriculum. The curriculum also aims to develop higher order thinking skills and exposes students to a wide variety of literary and authentic texts. This is intended to make MTL a living language that enables our young to lead purposeful lives, and further develop their interest and build a keen sense of life-long learning of MTL in our children. <br /><br />
  Changes in the global situation created new challenges in classroom teaching. The MTL curriculum has made many innovations in the face of these challenges, providing quality resources that enable students to learn MTL in the classroom and at home. <br /><br />
- The information featured in our MTLS MOE MTL curriculum webpage aims to provide parents and educators with an understanding of the different opportunities for MTL learning, beginning from Pre-school through Primary, Secondary and Pre-University. There will also be tips for parents and educators to gain insights and ideas to bring the joy of learning MTL to our young, and for them to be able to better engage the children in meaningful MTL learning experiences. 
+ The information featured in our MTLS MOE MTL curriculum webpage aims to provide parents and educators with an understanding of the different opportunities for MTL learning, beginning from Pre-School through Primary, Secondary and Pre-University. There will also be tips for parents and educators to gain insights and ideas to bring the joy of learning MTL to our young, and for them to be able to better engage the children in meaningful MTL learning experiences. 
  </p>
  <br />
     <img src="/images/2021-08-04_mtls_web_footer_600x250_300dpi.jpg" class="Image" width="1000" height="300" />
