--- a/pages/小学.md
+++ b/pages/小学.md
@@ -90,7 +90,7 @@ width:100%;
   </tr>
   <tr>
     <td style="text-align: left;font-family:KaiTi;font-size:25px;">
-    <li style="text-align: left;font-family:KaiTi;line-height: 1px;font-size:25px;">通过听、说、读、写和语言综合运用的教学，为学生打好语言基础。</li>
+    <li style="text-align: left;font-family:KaiTi;font-size:25px;"> 通过听、说、读、写和语言综合运用的教学，为学生打好语言基础。</li>
     <li style="text-align: left;font-family:KaiTi;font-size:25px;">通过活动和任务，让学生掌握口语互动和书面互动的技能，与他人进行有效、有意义的交流。</li>
     </td>
   </tr>
