--- a/pages/中学.md
+++ b/pages/中学.md
@@ -76,7 +76,7 @@ width:100%;
 <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165;">中学华文语文特选课程</h4>
 <p style="font-size:25px;font-family:KaiTi;text-align:justify;">中学华文语文特选课程（简称中学语特）设立的目的是要栽培精通双语的人才，提高学生的华文水平和文学素养。本课程为期2年，所有中学语特学生必须修读华文文学相关课程。学生除了可以参加2-3天语特营，文学讲座、作家座谈会等、也能到中国大陆、台湾等地进行2周海外浸儒活动。从2020年开始，教育部在9所中学开办中学华文语文特选课程。</p>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165;">课程活动 </h4>
-<p style="font-size:25px;font-family:KaiTi">1.2~3天语特营</p>
+<p style="font-size:25px;font-family:KaiTi">1.2-3天语特营</p>
 <ul>
 	<li style="font-size:25px;font-family:KaiTi">来自10所不同中学的同学共同参与</li>
 	<li style="font-size:25px;font-family:KaiTi">本地／海外作家分享</li>
