--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -137,7 +137,7 @@ text-decoration:none;
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">教之以礼 育之以德
    <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> Tzu Chi Great Love Preschool </span>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> Tzu Chi Great Love PreSchool</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
