--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -126,7 +126,7 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">小伙伴大玩具 <br/>
-	<span style="font-family:Lato,sans-serif;font-size:20px;">Mediacorp TV </span></td>
+	<span style="font-family:Lato,sans-serif;font-size:20px;">Mediacorp </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
