--- a/_exhibits/华文学习展示区/总览.md
+++ b/_exhibits/华文学习展示区/总览.md
@@ -21,12 +21,12 @@ third_nav_title: 华文学习展示区
     font-weight: 600;
 }
 	</style>
-<h5><strong>总览</strong></h5>
-	<a href="/exhibits/chinese-exhibitions-b/moe-curriculum/" ><img src="/images/mtls_overview_banners_v5_cl-moe.jpg"></a>
+	<b><h5 style="font-family:KaiTi; font-size:32px;">总览</h5></b>
+	<a href="/exhibits/chinese-exhibitions-b/moe-curriculum/" ><img src="/images/Exhibits Overview/CL_MOE Curriculum-100.jpg"></a>
 <br>
-	<a href="/exhibits/chinese-exhibitions-c/preschool/" ><img src="/images/mtls_overview_banners_v5_cl-preschool.jpg"></a>
+	<a href="/exhibits/chinese-exhibitions-c/preschool/" ><img src="/images/Exhibits Overview/CL_Preschool-100.jpg"></a>
 <br>
-	<a href="/exhibits/chinese-exhibitions-d/schools/" ><img src="/images/mtls_overview_banners_v5_cl-schools.jpg"></a>
+	<a href="/exhibits/chinese-exhibitions-d/schools/" ><img src="/images/Exhibits Overview/CL_Schools-100.jpg"></a>
 <br>
-	<a href="/exhibits/chinese-exhibitions-e/community-partners/" ><img src="/images/mtls_overview_banners_v5_cl-community.jpg"></a>
+	<a href="/exhibits/chinese-exhibitions-e/community-partners/" ><img src="/images/Exhibits Overview/CL_Community-100.jpg"></a>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
