--- a/pages/இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md
+++ b/pages/இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md
@@ -38,8 +38,9 @@ description: ""
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">இதன்வழிப் பிள்ளைகள் ஒருவருடன் ஒருவர் அர்த்தமுள்ள சூழலில் தாய்மொழியைப் பேசுகின்றனர். மேலும், இனஞ்சார்ந்த உள்ளூர்ப் பண்பாட்டைப் பற்றியும் அறிந்துகொள்கின்றனர். ஒவ்வொரு வாரமும் அர்த்தமுள்ள விளையாட்டின்வழியே சீனம், மலாய் இந்திய பண்பாட்டைப்பற்றிக்  கற்றல் நிலைய நடவடிக்கையின் வாயிலாக அறிந்துகொள்ள நேரம் ஒதுக்கப்பட்டுள்ளது.</p>
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">'மகிழ்வுடன் படித்தல்’ (Read For Joy) என்னும் வாசிப்புத்திட்டம், கருத்துப்பரிமாற்றத்திற்கு உதவுகிறது. விளையாட்டுகள், அதிசய வார திட்டவேலைகள் முதலியவற்றின் வாயிலாகப் பிள்ளைகள் தாய்மொழியில் பேசுவதற்கு ஆர்வத்தையும் தன்னம்பிக்கையையும் வளர்த்துக்கொள்கின்றனர். இவ்வாறு தாய்மொழியைக் கற்றுக்கொள்வது பிள்ளைகளுக்கு இயல்பானதாகவும் மகிழ்ச்சி மிக்கதாகவும் அமைகிறது.</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Raising a Bilingual Child</h4>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The MOE Kindergarten curriculum offers many opportunities for children to listen and speak in English and their Mother Tongue Languages (MTL).
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The MOE Kindergarten curriculum offers many opportunities for children to listen and speak in English and their Mother Tongue Languages (MTL).<br><br>
 At MK@Horizon, the Starlight Literacy programme for MTL, uses routines and learning-centre time to encourage children to interact with one another in their MTL within a variety of meaningful contexts. Children also develop an appreciation for local ethnic cultures. </p>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The weekly, dedicated learning-centre time allows children to learn more about Chinese, Malay or Indian culture through purposeful play. Through the “Read for Joy” programme, interactive games and “Weeks of Wonder” projects, children develop both an interest and confidence in communicating in their MTL.<br/>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The weekly, dedicated learning-centre time allows children to learn more about Chinese, Malay or Indian culture through purposeful play. Through the “Read for Joy” programme, interactive games and “Weeks of Wonder” projects, children develop both an interest and confidence in communicating in their MTL.
+	<br/><br>
 Learning MTL interactively is both natural and enjoyable for children</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
