--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/கல்வி அமைச்சின் பாடக்கலைத்திட்டம்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/கல்வி அமைச்சின் பாடக்கலைத்திட்டம்.md
@@ -11,7 +11,7 @@ image{
  max-width:50%
  }
  .btnClass {
-    display: inline-block;
+    display: none;
     padding: 15px 20px;
     text-align: center;
     text-decoration: none;
