--- a/_exhibits/华文学习展示区/教育部课程.md
+++ b/_exhibits/华文学习展示区/教育部课程.md
@@ -41,10 +41,10 @@ background-color: lightgrey;!important;
 <div><h2 style="font-family:KaiTi;color:#d14165;">教育部课程</h2>
 <div style="margin-top:auto;margin-bottom:auto;text-align:center;">
 <div class="tab">
-  <a href="/cl-preschool"><div style="display:inline-block; font-family:KaiTi;font-size:25px;" class="btnClass">学前教育</div></a>
-  <a href="/cl-prischool"><div style="display:inline-block; font-family:KaiTi;font-size:25px;" class="btnClass">小学</div></a>
-  <a href="/cl-secsch/"><div style="display:inline-block; font-family:KaiTi;font-size:25px;" class="btnClass">中学</div></a>
-  <a href="/cl-preU/"><div style="display:inline-block; font-family:KaiTi;font-size:25px;" class="btnClass">高中</div></a>
+  <a href="/cl-preschool"><div style= "font-family:KaiTi;font-size:25px;" class="btnClass">学前教育</div></a>
+  <a href="/cl-prischool"><div style="font-family:KaiTi;font-size:25px;" class="btnClass">小学</div></a>
+  <a href="/cl-secsch/"><div style="font-family:KaiTi;font-size:25px;" class="btnClass">中学</div></a>
+  <a href="/cl-preU/"><div style="font-family:KaiTi;font-size:25px;" class="btnClass">高中</div></a>
  </div></div><br />
   <div style="margin-top:auto;margin-bottom:auto;text-align:left;">
    <h4 style="padding-top:12px;font-color:#d14165;font-family:KaiTi; color:#d84178;font-size:30px;"><b>培养乐学善用的母语使用者 </b></h4>
