--- a/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
+++ b/pages/கல்வி அமைச்சின் பாலர் பள்ளிகள்.md
@@ -122,7 +122,7 @@ margin-left:25px;
 <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify;"><a href="https://www.moe.gov.sg/preschool/moe-kindergarten/curriculum/hi-light" target="_blank;">ஹை-லைட் திட்டம்</a></p>
 <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify;"><a href="https://www.moe.gov.sg/preschool/moe-kindergarten/curriculum/starlight" target="_blank;">ஸ்டார்லைட் எழுத்தறிவுத் திட்டம்  </a></p>
  <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; font-weight:bold;">
-ஸ்டார்லைட் எழுத்தறிவுத் திட்டம் இந்த நான்கு கருப்பொருள்களை மையமாகக்கொண்டு அமைந்துள்ளது</p>
+ஸ்டார்லைட் எழுத்தறிவுத் திட்டம் இந்த நான்கு கருப்பொருள்களை மையமாகக்கொண்டு அமைந்துள்ளது.</p>
  <h4 id="C2" style="font-size:30px;font-family:Anjal New InaiMathi Sch Book; color:purple;">ஸ்டார்லைட் எழுத்தறிவுத் திட்டம்
 </h4>
  <p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; color:black; font-weight:bold;">கருப்பொருள்கள்</p>
@@ -161,7 +161,7 @@ margin-left:25px;
 </td>
     </tr>
  </table>
-  <h4 id="C4"><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">அதிசய வாரத் திட்டப்பணி பின்வருவனவற்றை நிறைவேற்ற முயல்கின்றன.</span></h4>
+  <h4 id="C4"><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">அதிசய வாரத் திட்டப்பணி பின்வருவனவற்றை நிறைவேற்ற முயல்கின்றது.</span></h4>
   <table>
        <tr>
          <td>
