--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
@@ -77,7 +77,7 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
-  text-align: left;padding: 8px;background-color:#9b4490; color:#fff">I Speak in Tamil Too!
+  text-align: left;padding: 8px;background-color:#9b4490; color:#fff">நானும் தமிழில் பேசுவேன்!
   <br />
 			<span style="font-family:Lato,sans-serif;">Pei Tong Primary School </span>
 </td>
