--- a/pages/小学.md
+++ b/pages/小学.md
@@ -130,7 +130,7 @@ width:100%;
 <br/>
 <div class="row">
  <div class="column">
- <iframe width="350" height="315" src="https://www.youtube.com/embed/jQjU07ccL8I" title="中年段高级华文——小小书" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <iframe width="350" height="315" src="https://www.youtube.com/embed/FfEBnJvr-h8" title="中年段高级华文——小小书" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
  <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段母语辅助计划ABLE华文我也行 
 课堂活动</span>
    <br />
