--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -192,6 +192,6 @@ Dr Zheng Yingjiang   <br/>
  <a href="/Dr-Zheng-Yingjiang" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
     </tr>
 </table>
-	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div><p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
 </body>
 </html>
