--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -193,3 +193,4 @@ Mdm Kunawathyammal D/O Kaliannan <br/>
     </tr>
 </table>
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+	<p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
