--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -6,6 +6,20 @@ third_nav_title: 华文学习展示区
 ---
 <head>
 <style>
+	.btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
 	.btn1{
 	font-size: 18px;
     font-family: KaiTi;
@@ -146,4 +160,6 @@ text-decoration:none;
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td></tr>
 		</table>
+	<p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
+	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body>
