--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/கல்வி அமைச்சின் பாடக்கலைத்திட்டம்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/கல்வி அமைச்சின் பாடக்கலைத்திட்டம்.md
@@ -67,9 +67,8 @@ background-color: lightgrey;!important;
  The key purpose of Mother Tongue Language (MTL) education is to equip our young with effective communication skills and to create a greater awareness and appreciation about our culture and values, which in turn enables our young to have the confidence to connect with similar language communities across Asia and the world. To achieve this, schools, families, and society must complement each other’s efforts to provide an immersive and welcoming MTL environment.  <br /><br />
  The MTL curriculum aims to develop our young to be proficient language users who have strong foundational language and literacy skills. It leverages on students’ written and interpersonal communication skills with real-life contexts via the fundamental language skills such as speaking, listening, and reading. The infusion of Communications Technology (ICT), Character and Citizenship Education (CCE) and Social and Emotional Learning (SEL) into the curriculum further enhances the learning and exposes our young to the cultures and values weaved throughout the curriculum. It also aims to develop higher order thinking skills and expose students to a wide variety of literary and authentic texts. This is intended to make MTL a living language that enables our young to lead purposeful lives.<br /><br />
 The information featured in our MTLS MOE MTL curriculum webpage aims to provide parents and educators with an understanding of the different opportunities for MTL learning beginning from Pre-school through Primary, Secondary and Pre-University. There will also be some insights and ideas for parents and educators to ignite the joy of learning MTL in our young and for them to be able to better support the children in this journey.
-
 </p><br />
-
+<p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
 <div class="btntop">
   <a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a>
 </div>
