--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -110,7 +110,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Genius-Hive-Preschool-synopses" class="btn1" style="color:#fff;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
+  <a href="/Genius-Hive-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
