--- a/_exhibits/华文学习展示区/教育部课程.md
+++ b/_exhibits/华文学习展示区/教育部课程.md
@@ -64,7 +64,7 @@ background-color: lightgrey;!important;
  The information featured in our MTLS MOE MTL curriculum webpage aims to provide parents and educators with an understanding of the different opportunities for MTL learning, beginning from Pre-School through Primary, Secondary and Pre-University. There will also be tips for parents and educators to gain insights and ideas to bring the joy of learning MTL to our young, and for them to be able to better engage the children in meaningful MTL learning experiences. 
  </p>
  <br />
-		<p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
+		<p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;font-style: italic;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
    <a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a>
 </div>
 </div>
