--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -174,6 +174,7 @@ width:90%;
 <li style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; font-size:24px;">தமிழ் இல்க்கியப் பாடக்கூறு </li>
 	   <img src="/images/Tamil 5.png" /> 
 <br /><br />
+	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body>
 </html>
