--- a/pages/தொழில்நுட்பம்வழி தமிழ்மொழி.md
+++ b/pages/தொழில்நுட்பம்வழி தமிழ்மொழி.md
@@ -41,4 +41,5 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Technology Enabled Tamil Language Learning</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">UPTLC leverages technologies like VR and AR to create language and cultural learning environments that integrate both virtual and physical realities to provide a joyful and engaging learning experience.</p>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">At UPTLC, students are provided with opportunities to engage in cultural activities through an interactive Virtual 360° experience of the Herbal Garden and Heritage Centre. This empowers students to apply their learning real time and express their creativity. The use of such technological tools in UPTLC’s signature programmes, cultural-based traditional activities, and teaching and learning enables students to experience joyful discoveries in an authentic setting, whilst nurturing in them a disposition for life-long learning. </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
