--- a/pages/முரசுடன் ஓர் இன்பமான தமிழ்மொழிக் கற்றல் பயணம்.md
+++ b/pages/முரசுடன் ஓர் இன்பமான தமிழ்மொழிக் கற்றல் பயணம்.md
@@ -37,4 +37,5 @@ description: ""
 <p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">இவற்றுடன் கல்வி அமைச்சின், லீ குவான் யூ இருமொழிக் கல்விப் பிரிவின்  ஆதரவுடன் பாலர் பள்ளி மாணவர்களுக்காகப் ‘பாலர் முரசு’ வெளியீடு கண்டு வருகிறது. இது மாதம் ஒருமுறை வெளியிடப்படுகிறது. மேலும்,ஆர்வமூட்டும் உள்ளடக்கம், வண்ணமயமான பக்கங்கள் போன்றவற்றைக் கொண்டுள்ளது. செய்தி வடிவிலான நடவடிக்கைகள், கவிதைகள், கேலிச்சித்திரங்கள் போன்றவை மாணவர்களுக்குத் தமிழ்மொழியைப்பற்றிய தெளிவான புரிந்துணர்வை அளிக்கின்றன. இவற்றைப் பற்றிய தகவல்கள் காட்சிக்கூடத்தில் இடம்பெற்றிருக்கும். </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Learning Tamil in a Delightful Manner</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Published by the SPH Media Trust, Tamil Murasu has launched two student publications– Maanavar Murasu for Primary Schools and Illayar Murasu for Secondary Schools. Tamil Murasu has also embarked on the Baalar Murasu publication project with support from the LKYFB, MOE. This is a monthly publication to support Pre-schoolers in language learning . All publications provide students with enriching and engaging content in the form of news, activities, poems and comics.   </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
