Update file: பகுத்தறிவோம் பகிர்ந்துகொள்வோம்.md

--- a/pages/பகுத்தறிவோம் பகிர்ந்துகொள்வோம்.md
+++ b/pages/பகுத்தறிவோம் பகிர்ந்துகொள்வோம்.md
@@ -39,4 +39,6 @@ description: ""
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">தாய்மொழித் திறனை வளர்க்கவும் தாய்மொழியின்பால் உள்ள ஆர்வத்தை மேம்படுத்தவும் பள்ளி, நிலை வாரியாகப்  போட்டிகளை நடத்துகிறது. மாணவர்களின் பெற்றோர்களும் அதிக ஈடுபாட்டுடன் தம் பிள்ளைகளை இப்போட்டிகளுக்குத் தயார்ப்படுத்துகின்றனர்.</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Let’s Express and Explore</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The Mother Tongue Fortnight cum Racial Harmony Day at Evergreen Primary School aims to promote language and cultural appreciation, increase cross-cultural awareness, and create an authentic environment that encourages Mother Tongue Language (MTL) use among students. </p>
-<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Tamil students also have many opportunities and platforms to appreciate and understand the richness of the language and its culture, like TGIF (That’s Great It’s Friday), a one-hour weekly school-based recess programme. Tamil students also share their learning experiences in Tamil during their MTL lessons through a variety of activities. The school also holds level-based competitions in partnership with parents to showcase their students’ flair and passion for Tamil.</p><div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Tamil students also have many opportunities and platforms to appreciate and understand the richness of the language and its culture, like TGIF (That’s Great It’s Friday), a one-hour weekly school-based recess programme. Tamil students also share their learning experiences in Tamil during their MTL lessons through a variety of activities. The school also holds level-based competitions in partnership with parents to showcase their students’ flair and passion for Tamil.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
