--- a/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
+++ b/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
@@ -315,4 +315,5 @@ width:100%;
 <a href="https://www.tamilmurasu.com.sg/singapore/story20210222-61692.html" target="_blank">உயர்தரம் 3 தமிழ்மொழிப் பாடம் பயில ஆர்வம் இருந்தால் போதும்
 </a>
  <br /> <br />
+	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
