--- a/pages/மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md
+++ b/pages/மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md
@@ -39,4 +39,5 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Joy of Spoken Interaction through Augmented Reality </h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Gan Eng Seng Primary School believes that empowering students with the necessary knowledge and skills will enable them to become explorers of their own learning. As such, the use of gamification in the oracy package has been implemented to enable Primary 5 students to dive into an interactive learning experience.  </p>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Selected video clips from SLS and YouTube were also incorporated into the oracy package as a means for students to engage in self-directed learning. This e-resource paved the way for developing students’ oracy and communication skills. Students experience the joy of learning in articulating their thoughts through games and oracy models. This approach enables students to not only understand the content well but also express their thoughts with confidence in Tamil. </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
