Update file: விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்.md

--- a/pages/விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்.md
+++ b/pages/விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்.md
@@ -37,4 +37,5 @@ description: ""
 <p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">மேலும், இக்குழு மறுபயனீட்டுப் பொருள்களைப் பயன்படுத்திப் புத்தாக்கத்திறனோடு வியூஃபைண்டர்களைத் தயாரிக்கவும் ஊக்குவிக்கிறது. மறுசுழற்சிச் செய்யப்பட்ட பொருள்களால் உருவாக்கப்பட்ட வியூஃபைண்டர்கள் வனவிலங்குகளையும் அவற்றின் வாழ்விடங்களையும் எவ்வாறு பாதுகாக்கலாம் என்பதைப்பற்றிக் கலந்துபேசுவதற்கு ஓர் அரிய ஆக்ககரமான வாய்ப்பினை வழங்குகிறது. </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Enter the Wonderful World of Animals</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Mandai Wildlife Reserve would like to share how explorations of the wonderful world of animals can enhance the learning of Mother Tongue Languages. Schools and families are invited to explore the animal exhibits and online resources using viewfinders. Our viewfinders use word games and open-ended questions to combine language learning  and learning about the animal kingdom through interactive and meaningful activities. MWG also  provides a challenge for all viewers to create eco-friendly viewfinders. The creative process of making viewfinders out of discarded objects presents an authentic opportunity to talk about how we can protect wildlife and their habitats by reusing items we would otherwise just throw away.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
