Update file: விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்.md

--- a/pages/விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்.md
+++ b/pages/விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்.md
@@ -38,4 +38,5 @@ description: ""
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">மொழிக் கற்றலுக்கு வீட்டுக்கும் பள்ளிக்கும் இடையிலான பங்காளித்துவம் இன்றியமையாதது. அதனால், பிள்ளைகள்  வீட்டிலும் தொடர்ந்து தமிழ்மொழி கற்பதற்கு ஆதரவளிக்கும் வகையில் நடவடிக்கைகள் வழங்கப்படுகின்றன. </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;"> Fun Ways to Play and Learn Tamil!</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">PCF Sparkletots @ Chua Chu Kang uses an innovative and creative approach to enliven the learning of Tamil Language through culture, communication and connection. Children's attention and curiosity are ignited via cultural music and dance sessions. These also serve as an effective  method for instilling words of virtue and values in the children. The learning centre is also equipped with  a variety of activities and fun-filled games  to capture and sustain children’s interest. The centre believes strongly in home-school partnerships where take-home activities to support the learning of Tamil Language at home are given regularly to families.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
