Update file: வேற்றுமையில் ஒற்றுமை.md

--- a/pages/வேற்றுமையில் ஒற்றுமை.md
+++ b/pages/வேற்றுமையில் ஒற்றுமை.md
@@ -39,4 +39,6 @@ description: ""
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">பாரம்பரிய விளையாட்டுகள் விளையாடுதல், மரபுக்கதைகள் கேட்டல், மரபுசார்ந்த பாடல்கள் பாடுதல், நடனங்கள் ஆடுதல் போன்ற நடவடிக்கைகளில் ஈடுபாட்டுடன் பங்கேற்கப் பிள்ளைகளுக்கு வாய்ப்பளிக்கப்படுகின்றன. உணவுவகைகள், ஆடைகள், விளையாட்டுகள், வீடுகளின் தனித்துவக் கூறுகள், நமது பல்லினஞ்சார்ந்த உள்ளூர் உணவு வகைகளில் பயன்படுத்தப்படும் இலைதழைகளைப் பற்றிய பாடங்களும் இவற்றில் அடங்கும். இவற்றின் வாயிலாக எங்கள் பள்ளிப் பிள்ளைகள் ஆர்வமூட்டும் வேடிக்கைமிக்க கற்றலில் ஈடுபடுகிறார்கள்.</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;text-align:justify;"> Unity in Diversity </h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">‘Unity in Diversity’ is an initiative by PCF Sparkletots @ Punggol Shore Blk 174D to inculcate in their pupils a sense of respect towards the various ethnic groups of Singapore. The school lets the children discover, for themselves, the uniqueness of each ethnic culture so as to raise their awareness, and understanding of one another. </p>
-<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Teachers incorporate elements of purposeful experiential learning and authentic learning through various activities, such as lessons on different costumes, games, distinct features of homes, and food, with a  particular emphasis on the types of leaves used in our multicultural local cuisines. Children will have fun learning and discovering!  </p><div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Teachers incorporate elements of purposeful experiential learning and authentic learning through various activities, such as lessons on different costumes, games, distinct features of homes, and food, with a  particular emphasis on the types of leaves used in our multicultural local cuisines. Children will have fun learning and discovering!  </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
