--- a/pages/字谜花园.md
+++ b/pages/字谜花园.md
@@ -3,7 +3,6 @@ title: 字谜花园
 permalink: /Maha-Bodhi-School-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -38,4 +37,5 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Fun with Word Riddles</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">To foster students’ retention in the learning of Chinese characters, Maha Bodhi School conducts a “Fun with Word Riddles” activity to boost students’ vocabulary and help them develop critical and inventive thinking skills. Students experience the joy of learning through this activity in class. The school uses pre-recorded videos to guide students on riddle-solving strategies and help them in creating their own riddles. 
 Teachers design activities on the Singapore Student Learning Space (SLS) to reinforce students’ learning and for them to showcase their riddles. These activities strengthen students’ mastery of Chinese characters and enhance their interest in learning Chinese. </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
