--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -3,7 +3,6 @@ title: 学前教育
 permalink: /cl-preschool
 description: ""
 ---
-
 <html>
 	<style>
 		.btntop {
@@ -112,4 +111,5 @@ description: ""
 </p> 
      <p style="font-size:25px;font-family:KaiTi;">之后，你也可以和孩子一起书空的不同笔画，还可以和孩子一起利用周围的物品寻找与笔画形状相似的地方。</p></td>
   </table>
+	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
