--- a/pages/小伙伴大玩具.md
+++ b/pages/小伙伴大玩具.md
@@ -3,7 +3,6 @@ title: 小伙伴大玩具
 permalink: /Mediacorp-TV-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -39,4 +38,5 @@ description: ""
 X, Y & Zain!
 Ming Lee C/o Manickam</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Through playing with Big Toys, kids get a chance to see and experience their favourite toys - upsized and real! Kids get to discover and learn all about our big toys as well as their actual versions through a wide variety of fun activities.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
