--- a/pages/就地循环模式的混合式学习.md
+++ b/pages/就地循环模式的混合式学习.md
@@ -3,7 +3,6 @@ title: 就地循环模式的混合式学习
 permalink: /Punggol-Secondary-School-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -39,4 +38,5 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Station Rotation Model in Blended Learning
 </h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Punggol Secondary School’s Mother Tongue Department adopts the “Station Rotation Model” from Michael B Horn & Heather Staker, as a blended learning approach. This involves small group collaboration, individual learning and teacher feedback, each of which takes place as students rotate from one station to another. Leveraging on ICT tools, this approach also allows a combination of home-based learning, online learning and face-to-face learning. This pedagogical model is suitable for second language learners as it promotes the joy of learning through student collaboration.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
