--- a/pages/巧用绘本，让华文学习活起来.md
+++ b/pages/巧用绘本，让华文学习活起来.md
@@ -3,7 +3,6 @@ title: 巧用绘本，让华文学习活起来
 permalink: /First-Toa-Payoh-Primary-School-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -40,4 +39,6 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Liven Up Learning of Chinese Language Through the Use of Picture Books</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">To cultivate students’ interest and enrich their learning in Chinese Language (CL), First Toa Payoh Primary School has designed fun-filled activities along with picture books to enthuse and reinforce their learning.   </p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Teachers use picture books to complement the textbooks to enhance students’ communication and thinking skills. During Mother Tongue Language Fortnight, picture books are used to engage students to better appreciate Chinese culture. The school also organizes parent-child seminars to guide parents on the selection and use of picture books for interactive reading. </p>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Picture book activities have helped to generate greater reading interest and a love for CL and culture in students.</p><div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Picture book activities have helped to generate greater reading interest and a love for CL and culture in students.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
