--- a/pages/探究乐园.md
+++ b/pages/探究乐园.md
@@ -3,7 +3,6 @@ title: 探究乐园
 permalink: /Corporation-Primary-School-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -38,4 +37,6 @@ description: ""
 </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Inquiry-based Learning (IBL) Experience in Corporation Primary School</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Corporation Primary School aims to enrich Primary 3 to Primary 6 students’ knowledge and learning experiences of the Chinese language through an Inquiry-based Learning (IBL) programme. This structured school-based programme features the following series of lessons: “Young Book Lover”, “Young Journalist”, “Young Writer” and “Young Explorer”.  </p>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Students’ interests are slowly aroused as they learn through questioning and critical thinking strategies, and work in teams to display their work on online platforms. The programme enables students to experience joy in their learning and helps reinforce Chinese language competencies through encouraging students’ active participation in their learning.</p><div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Students’ interests are slowly aroused as they learn through questioning and critical thinking strategies, and work in teams to display their work on online platforms. The programme enables students to experience joy in their learning and helps reinforce Chinese language competencies through encouraging students’ active participation in their learning.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
