--- a/pages/探索生活，趣学华语.md
+++ b/pages/探索生活，趣学华语.md
@@ -3,7 +3,6 @@ title: 探索生活，趣学华语
 permalink: /Genius-Hive-Preschool-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -39,4 +38,5 @@ color: #d84178;text-align:justify;">探索生活，趣学华语</h4>
 <p style="font-size: 21px;font-family: KaiTi; text-align:justify;">除了课堂教学， “晨间散步”、“文化欣赏”、“事件简述” 和 “国际交流” 等活动也能激发幼儿的好奇心，培养幼儿的批判性斯文，拓展他们的视野。</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;"> Learning Mandarin through Daily Experiences</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Genius Hive Pre-school believes that children learn languages best through their daily experiences in school, at home, and in their surroundings.  Young children can relate to such experiences which makes learning meaningful, active, and enjoyable to them.  Our holistic curriculum focuses on planned, child-oriented activities that involve both parents and the community.  Besides classroom activities, we engage our children in morning walks and cultural appreciation activities.  Children are also exposed to current issues and engage in international exchange programmes that extend their experiences, curiosity and sense of inquiry beyond our local context.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
