--- a/pages/推广华文学习委员会.md
+++ b/pages/推广华文学习委员会.md
@@ -3,7 +3,6 @@ title: 推广华文学习委员会
 permalink: /Committee-to-Promote-Chinese-Language-Learning-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -40,4 +39,5 @@ description: ""
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">CPCLL consists of five working groups: Writing, Reading, Culture, Pre-school, and Outreach & Digital.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">CPCLL’s signature programmes and key activities include “Xin Kong Xia”. the National Schools Xinyao Festival, World Book Day, Literature Under the April Sky and the Chinese Street Dance Competition.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The CPCLL e-gallery will showcase these various avenues for engaging parents and students and promoting the use of Chinese.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
