Update file: 教之以礼 育之以德.md

--- a/pages/教之以礼 育之以德.md
+++ b/pages/教之以礼 育之以德.md
@@ -3,7 +3,6 @@ title: 教之以礼 育之以德
 permalink: /Tzu-Chi-Great-Love-Preschool-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -42,4 +41,5 @@ color: #d84178;text-align:justify;">教之以礼 育之以德</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">They apply to daily life and seek to inculcate values of love, respect and gratitude in children. The short and simple teachings are incorporated into lessons through a variety of approaches such as story-telling, experiential activities and other activities.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Key features of the PreSchool include the Jing Si Aphorisms, Tzu Chi Humanistic Aesthetics (tea and flower ceremony), Tzu Chi Sign Language, life education through picture books and learning through play. 
 </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
