--- a/pages/文化英雄联盟之我是小战士.md
+++ b/pages/文化英雄联盟之我是小战士.md
@@ -3,7 +3,6 @@ title: 文化英雄联盟之我是小战士
 permalink: /MK-Wellington-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -43,4 +42,5 @@ Nurturing the Joy of Learning Mother Tongue Languages and Culture</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">‘I am a Cultural Ambassador!’ is a Mother Tongue Language (MTL) programme at MOE Kindergarten @ Wellington.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The programme aims to nurture a joy of learning MTL and develop children’s awareness and appreciation of both their own cultural heritage and the diverse cultures of Singapore. Through authentic, fun and meaningful activities, children explore topics related to local cultures that develop their cultural identity and understanding of their own and other cultures.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">As part of the programme, family involvement, through family-based activities, is encouraged to further inculcate in children a love for MTL and their own cultural heritage. </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
