--- a/pages/林景华文小学堂.md
+++ b/pages/林景华文小学堂.md
@@ -3,7 +3,6 @@ title: 林景华文小学堂
 permalink: /Woodgrove-Primary-School-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -39,4 +38,6 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Woodgrove’s Chinese Language Flagship Programme</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Woodgrove Primary School has implemented the Chinese Language (CL) Flagship Programme to strengthen students’ CL mastery and nurture interest in CL language and culture. The programme aims to provide holistic and immersive learning experiences for all students.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">In this programme, students are exposed to a plethora of activities in spiral progression, such as cultural appreciation activities, drama workshops and translation lessons. During the pandemic, the school conducted a virtual immersion programme with a school in China, which was well-received by both students and parents.</p>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Woodgrove’s CL Flagship Programme has enhanced students’ language competencies and interest in learning the language.  </p><div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Woodgrove’s CL Flagship Programme has enhanced students’ language competencies and interest in learning the language.  </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
