--- a/pages/滨海艺术中心.md
+++ b/pages/滨海艺术中心.md
@@ -3,7 +3,6 @@ title: 滨海艺术中心
 permalink: /Esplanade-Theatres-on-the-Bay-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -42,4 +41,5 @@ description: ""
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">As Singapore’s national performing arts centre, Esplanade – Theatres on the Bay, believes in making the arts accessible to everyone.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Esplanade aims to increase awareness of the arts through exposing our young to the performing arts and educating them in the different art forms that are presented at the centre all year round. This includes offering opportunities and space for young people to express their own creativity and imagination.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Students can also learn more about the various art forms online through resources provided on the Family and Schools section on Esplanade Offstage. These resources also encourage language acquisition through the discovery of different cultures and traditions.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
