Update file: 秘密花园, 师生同乐.md

--- a/pages/秘密花园, 师生同乐.md
+++ b/pages/秘密花园, 师生同乐.md
@@ -3,7 +3,6 @@ title: 秘密花园, 师生同乐
 permalink: /Meridian-Primary-School-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -38,4 +37,5 @@ description: ""
 </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">One Secret Garden, Many Joyful Moments</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">To nurture the joy of learning and promote the use of the Mother Tongue Languages (MTL), Meridian Primary School has turned the MTL room into a magical hideaway – “The Secret Garden”. This provides students with authentic experiences in learning Chinese, as they engage and explore in a stimulating environment. Students immerse in activities such as “Shopping Day”, “My Hobbies Day” and “Recruitment Day”. These activities excite students about learning while cultivating their interest and love for Chinese Language. </p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
